fixed all my dto handlers
